added BIG-IP devices

--- a/vpc/terraform.tfvars.example
+++ b/vpc/terraform.tfvars.example
@@ -7,8 +7,8 @@ vpc0_external_rt = "${vpc0_external_rt}"
 
 vpc1 = "${vpc1}"
 vpc1_subnet_ids = ${vpc1_subnet_ids}
-vpc1_external_rt = "${vpc1_external_rt}"
 vpc1_internal_rt = "${vpc1_internal_rt}"
+vpc1_internal2_rt = "${vpc1_internal2_rt}"
 
 vpc2 = "${vpc2}"
 vpc2_subnet_ids = ${vpc2_subnet_ids}
